src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DuplicateNameInDataTemplate.xaml
<Page
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
>    
        <Page.Resources>
            <DataTemplate x:Key="myDataTemplate">
                <Label>
                    <TextBlock>
                        <Bold x:Name="name">Bold 1</Bold>
                        <Bold Name="name">Bold 2</Bold>
                    </TextBlock>
                </Label>
            </DataTemplate>
        </Page.Resources>
</Page>

